--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -12,4 +12,8 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  /* flexbox */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
