change default font to courier new backup font: sans-serif

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,5 +1,5 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Courier New', sans-serif;
   background: papayawhip;
   /* flexbox */
   display: flex;
