set flexbox properties for list items ul container set flex direction to row set gap to 20px

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -19,6 +19,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  /* flexbox */
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
 
 a {
