--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -49,4 +49,10 @@ a {
 
 ul {
   list-style-type: none;
+  /* layout */
+  gap: 16px;
+  /* flexbox */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
