--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -58,7 +58,14 @@ ul {
   align-items: center;
 }
 
+.left {
+  display: flex;
+  justify-content: flex-start;
+  gap: 16px;
+}
+
 .right {
   display: flex;
   justify-content: flex-end;
+  gap: 16px;
 }
