combine .left, .right styling rules .left, .right {   display: flex;   align-items: center;   gap: 16px;

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -59,14 +59,8 @@ ul {
   align-items: center;
 }
 
-.left {
+.left, .right {
   display: flex;
-  justify-content: flex-start;
-  gap: 16px;
-}
-
-.right {
-  display: flex;
-  justify-content: flex-end;
+  align-items: center;
   gap: 16px;
 }
