--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -13,6 +13,20 @@ img {
   text-align: center;
 }
 
+.info-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 32px;
+  margin-bottom: 64px; /* space above footer */
+}
+
+.info-block {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
