--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -21,7 +21,7 @@ img {
   margin-bottom: 64px; /* space above footer */
 }
 
-.info-block {
+.text {
   display: flex;
   flex-direction: row;
   align-items: center;
