set flexbox styling for .plant-img class set flex-direction to row

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -27,6 +27,11 @@ img {
   align-items: center;
 }
 
+.plant-img {
+  display: flex;
+  flex-direction: row;
+}
+
 /* do not edit this footer */
 .footer {
   position: fixed;
