set .info flex-direction to column

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -15,7 +15,7 @@ img {
 
 .info {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   gap: 32px;
   margin-bottom: 64px; /* space above footer */
