set .info flex-direction to column set .info align-items to center

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -17,6 +17,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 32px;
   margin-bottom: 64px; /* space above footer */
 }
