--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -14,23 +14,29 @@ img {
 }
 
 .info {
+  /* flexbox */
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  /* layout */
   gap: 32px;
   margin-bottom: 64px; /* space above footer */
 }
 
 .text {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  text-align: center;
 }
 
-.plant-img {
+.plants {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+}
+
+.plant-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* do not edit this footer */
