--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -35,7 +36,7 @@ img {
 
 .plant-block {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
