--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -15,11 +15,6 @@ img {
 }
 
 .info {
-  /* flexbox */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* layout */
   gap: 32px;
   margin-bottom: 64px; /* space above footer */
 }
@@ -28,16 +23,9 @@ img {
   text-align: center;
 }
 
-.plants {
+.container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-}
-
-.plant-block {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
 
 /* do not edit this footer */
