--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -16,10 +16,15 @@ body {
 }
 
 .modal {
-  background: white;
+  /* layout */
   width: 480px;
   padding: 20px;
   border-radius: 10px;
+  /* flexbox */
+  display: flex;
+  flex-direction: row;
+  /* colors */
+  background: white;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
 
