--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -28,6 +28,12 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
 
+.header-close {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .icon {
   color: royalblue;
   font-size: 26px;
