add .header styling rules set header font weight to bold set header font size to 20px

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -34,6 +34,11 @@ body {
   justify-content: space-between;
 }
 
+.header {
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .icon {
   color: royalblue;
   font-size: 26px;
