--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -37,6 +37,11 @@ body {
 .header {
   font-weight: bold;
   font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
 
 .icon {
