set flexbox rules for header, footer set flex direction to row set justify-content to space-between

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -25,6 +25,12 @@ input {
   width: 400px;
 }
 
+.header, .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 ul {
   list-style-type: none;;
 }
