set flexbox rules for .left-links, .right-links set flex-direction to row set gap to 10px

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -35,6 +35,12 @@ input {
   background-color: #dadada;
 }
 
+.left-links, .right-links {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 ul {
   list-style-type: none;;
 }
