set button padding to 10px

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -13,6 +13,7 @@ img {
 
 button {
   font-family: Roboto, sans-serif;
+  padding: 10px;
   border: none;
   border-radius: 8px;
   background: #eee;
