--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -49,6 +49,7 @@ input {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex: 1; /* This makes .content grow and push the footer down */
 }
 
 .buttons {
