set header font size to 32px and weight to 900

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -5,7 +5,12 @@ body {
 }
 
 .header {
+  /* layout */
   height: 72px;
+  /* font */
+  font-size: 32px;
+  font-weight: 900;
+  /* colors */
   background: darkmagenta;
   color: white;
 }
