--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -15,10 +15,9 @@ body {
   color: white;
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+.content {
+  display: flex;
+  flex-direction: row;
 }
 
 .sidebar {
@@ -31,4 +30,10 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
 }
