add flexbox properties to footer set align-items and justify-content to center

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -37,7 +37,13 @@ body {
 }
 
 .footer {
+  /* layout */
   height: 72px;
+  /* flexbox */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* colors */
   background: #eee;
   color: darkmagenta;
 }
