add 16px padding to sidebar

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -21,9 +21,13 @@ body {
 }
 
 .sidebar {
+  /* layout */
   width: 300px;
-  background: royalblue;
+  padding: 16px;
   box-sizing: border-box;
+  /* colors */
+  background: royalblue;
+  /* flexbox */
   display: flex;
   flex-shrink: 0;
 }
