set .cards flexbox properties set flex direction to row set flex-wrap to wrap

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -39,6 +39,12 @@ body {
   font-size: 24px;
 }
 
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
 .card {
   /* border and shadow */
   border: 1px solid #eee;
